# Fraud-Detection-using-ML

./: .gitignore  Fraud.ipynb  README.md  app.py  demo.ipynb  main.py  pyproject.toml  requirements.txt
Models/: model.joblib  model.pkl  preprocessor.joblib
Notebook/: Fraud.ipynb  model.joblib
